dist/1.0/bin/sample/retrieveUnpackaged/objects/Provisioning_Plan_Task__c.object
<CustomObject>
    <description>Task Definition object</description>
    <fields>
        <fullName>BH_Id__c</fullName>
        <description>Business Hours object. This field is filled when calculating due dates.</description>
        <inlineHelpText>Business Hours object. This field is filled when calculating due dates.</inlineHelpText>
        <label>BH Id</label>
        <referenceTo>BusinessHours</referenceTo>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BH_Number__c</fullName>
        <description>This field stores information about number of Business Hours in Business Day. This field is filled when calculating due dates.</description>
        <inlineHelpText>This field stores information about number of Business Hours in Business Day. This field is filled when calculating due dates.</inlineHelpText>
        <label>BH_Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Circuit_Data__c</fullName>
        <description>Details of OSS Circuit</description>
        <inlineHelpText>Details of OSS Circuit</inlineHelpText>
        <label>Circuit Data</label>
        <referenceTo>Circuit_Data__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Circuit_GP__c</fullName>
        <label>Circuit GP</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_ID__c</fullName>
        <description>Id of OSS Circuit</description>
        <inlineHelpText>Id of OSS Circuit</inlineHelpText>
        <label>Circuit ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Circuit_Id_OSS_Link__c</fullName>
        <description>con3: 
HYPERLINK(&apos;http://dione1.gtsgroup.cz/sand_box/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c) 
test: 
HYPERLINK(&apos;http://dione1.gtsgroup.cz/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c) 
prod: 
HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c)</description>
        <formula>HYPERLINK(&apos;http://dione1.gtsgroup.cz/idengine/ce_ie_circ/redir.htm?circ_name=&apos; + Circuit_ID__c , Circuit_ID__c)</formula>
        <inlineHelpText>Link to Circuit in OSS</inlineHelpText>
        <label>Circuit ID Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompleteByType__c</fullName>
        <label>CompleteByType</label>
        <picklist>
            <picklistValues>
                <fullName>Received Plus SLA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Due Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Complete_without_Acceptance__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if Manual Task should be Completed without additional creators Acceptance</description>
        <inlineHelpText>Indicates if Manual Task should be Completed without additional creators Acceptance</inlineHelpText>
        <label>Complete without Acceptance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <description>Component that should be sent to external system</description>
        <inlineHelpText>Component that should be sent to external system</inlineHelpText>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Costing_Task__c</fullName>
        <description>Relation to Costing task for this provisioning task.</description>
        <inlineHelpText>Relation to Costing task for this provisioning task.</inlineHelpText>
        <label>Costing Task</label>
        <referenceTo>CTask__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delay_Calculation__c</fullName>
        <label>Delay Calculation</label>
        <picklist>
            <picklistValues>
                <fullName>Hours</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Business Hours</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delay_Hours__c</fullName>
        <description>Number of hours of delay after which Task will be started.</description>
        <inlineHelpText>Number of hours of delay after which Task will be started.</inlineHelpText>
        <label>Delay Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Task will start after certain delay</description>
        <inlineHelpText>If checked, Task will start after certain delay</inlineHelpText>
        <label>Delay</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>GC_Interval__c</fullName>
        <label>GC Interval</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Generic_Product__c</fullName>
        <description>Generic Product for Automatic Provisioning</description>
        <inlineHelpText>Generic Product for Automatic Provisioning</inlineHelpText>
        <label>Generic Product</label>
        <referenceTo>Generic_Product__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Initial_Status__c</fullName>
        <label>Initial Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is definition or instance of the task</description>
        <inlineHelpText>Indicates if this is definition or instance of the task</inlineHelpText>
        <label>Instance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interval__c</fullName>
        <label>Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Line__c</fullName>
        <description>Order Line, for which this Instance of Task has been configured</description>
        <inlineHelpText>Order Line, for which this Instance of Task has been configured</inlineHelpText>
        <label>Order Line</label>
        <referenceTo>OrderLine__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Circuit_ID__c</fullName>
        <label>Parent Circuit ID</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provisioning_Plan__c</fullName>
        <label>Provisioning Plan</label>
        <referenceTo>Provisioning_Plan__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <description>Queue, that the Task should be assigned to</description>
        <inlineHelpText>Queue, that the Task should be assigned to</inlineHelpText>
        <label>Queue Name</label>
        <picklist>
            <picklistValues>
                <fullName>Billing CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Care HTS SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Construction Department SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Costing SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Care Department SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Network Department SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Document Department SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front Office Department SK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU ADSL Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Collocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU DialUp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Domain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Fiber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Hosted Exchange&amp;Webhosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Mailhosting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Microwave</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Provisioning Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Sales Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU Sales Support BA Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU SDH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Queue_Id__c</fullName>
        <description>ID of selected Queue</description>
        <inlineHelpText>ID of selected Queue</inlineHelpText>
        <label>Queue Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_B_Name__c</fullName>
        <description>Field stores Region Name retireved from OSS through GET TASKS FROM OSS functionality. [PROV]_PL_008: Geografical Task assigning to Queues
[https://helpdeskce.in.gtsce.com/browse/CECOLSVII-67]</description>
        <inlineHelpText>Region B Name retrieved from OSS</inlineHelpText>
        <label>Region B Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_Name__c</fullName>
        <description>Field stores Region Name retireved from OSS through GET TASKS FROM OSS functionality. [PROV]_PL_008: Geografical Task assigning to Queues</description>
        <inlineHelpText>Region A Name retrieved from OSS</inlineHelpText>
        <label>Region A Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_for_Close__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Required for Close</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SI_Interval__c</fullName>
        <label>SI Interval</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLA_Type__c</fullName>
        <label>SLA Type</label>
        <picklist>
            <picklistValues>
                <fullName>Business Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Source_Record_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Source Record Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Start_at_Datetime__c</fullName>
        <description>Exact datetime of Task execution start</description>
        <inlineHelpText>Exact datetime of Task execution start</inlineHelpText>
        <label>Start at Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_at__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, Task will be started at given datetime</description>
        <inlineHelpText>If checked, Task will be started at given datetime</inlineHelpText>
        <label>Start at</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Assignee__c</fullName>
        <description>User, that should be assigned to Task after creation</description>
        <inlineHelpText>User, that should be assigned to Task after creation</inlineHelpText>
        <label>Task Assignee</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <description>Description, that will appear on created Task</description>
        <inlineHelpText>Description, that will appear on created Task</inlineHelpText>
        <label>Task Description</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Task_Name__c</fullName>
        <label>Task Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Sequence__c</fullName>
        <label>Task Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Task_Type__c</fullName>
        <label>Task Type</label>
        <picklist>
            <picklistValues>
                <fullName>Manual Provisioning (New Install)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (Modification)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (Suspension)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (Reactivation)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Provisioning (Disconnection)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update of CSR Database</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic Provisioning</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Automatic Provisioning (ST)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Number Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Number Release</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Activation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Unregistration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Verification of Billing Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Account Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update of Billing Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Provisioning Verification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSS Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update OSS Circuit Status</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSS Technology Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extranet profile creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hardware Request (PL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yellowpages (PL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Set Start Billing Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Component Provisioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manual Billing (HU)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request to eWęgorz (PL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IP Gate (PL)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Disconnection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Update of Billing Products - Source Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute OSS Action</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Work_Group__c</fullName>
        <label>Work Group</label>
        <referenceTo>Work_Group__c</referenceTo>
        <relationshipLabel>Provisioning Plan Tasks</relationshipLabel>
        <relationshipName>Provisioning_Plan_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Provisioning Plan Task</label>
    <nameField>
        <displayFormat>PPT{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Provisioning Plan Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Assignee_or_Queue_Required</fullName>
        <active>true</active>
        <description>Either Assignee or Queue is required for Task definition</description>
        <errorConditionFormula>OR( 
AND( 
NOT(ISBLANK( Task_Assignee__c )), 
NOT(ISPICKVAL( QueueName__c, &apos;&apos;)) 
) 
)</errorConditionFormula>
        <errorMessage>Either Assignee or Queue is required for Task definition</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Component_Required_for_OSS_Task</fullName>
        <active>false</active>
        <description>Verifies if component was provided for OSS Task</description>
        <errorConditionFormula>AND( ISPICKVAL( Task_Type__c , &apos;OSS Provisioning&apos;) , ISBLANK( Component__c ))</errorConditionFormula>
        <errorDisplayField>Component__c</errorDisplayField>
        <errorMessage>Component is required for OSS Provisioning Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Costing_Task_only_on_instance</fullName>
        <active>false</active>
        <description>Relation to costing task can be filled in  only on task instance.</description>
        <errorConditionFormula>NOT(Provisioning_Plan__r.Instance__c)  &amp;&amp; NOT(ISBLANK( Costing_Task__c ))</errorConditionFormula>
        <errorDisplayField>Costing_Task__c</errorDisplayField>
        <errorMessage>Relation to costing task can be filled in  only on task instance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delay_Calculation</fullName>
        <active>false</active>
        <description>If Delay is checked, Delay Calculation must be filled</description>
        <errorConditionFormula>AND( Delay__c = true, 
NOT(
OR(
ISPICKVAL(Delay_Calculation__c,&apos;Hours&apos;), ISPICKVAL(Delay_Calculation__c,&apos;Business Hours&apos;)
)
)
)</errorConditionFormula>
        <errorDisplayField>Delay_Calculation__c</errorDisplayField>
        <errorMessage>Delay Calculation is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Delay_Hours</fullName>
        <active>false</active>
        <description>If Delay is checked, Delay Hours must be filled</description>
        <errorConditionFormula>AND( Delay__c = true, OR(ISBLANK(Delay_Hours__c),Delay_Hours__c = 0, Delay_Hours__c = null))</errorConditionFormula>
        <errorDisplayField>Delay_Hours__c</errorDisplayField>
        <errorMessage>Delay Hours is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_instance_only</fullName>
        <active>true</active>
        <description>Due Date can be set on instance only.</description>
        <errorConditionFormula>AND(Provisioning_Plan__r.Instance__c = false,NOT(ISBLANK( Due_Date__c)))</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date can be set on Provisioning Plan instance only.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Due_Date_past</fullName>
        <active>true</active>
        <description>Due Date can not be set in past.</description>
        <errorConditionFormula>Due_Date__c &lt; NOW()</errorConditionFormula>
        <errorDisplayField>Due_Date__c</errorDisplayField>
        <errorMessage>Due Date can not be set in past.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GP_for_Automatic_Provisioning_Required</fullName>
        <active>true</active>
        <description>Verifies that for Automatic Provisioning Tasks GP vas provided</description>
        <errorConditionFormula>AND( ISPICKVAL( Task_Type__c , &apos;Automatic Provisioning&apos;),  ISBLANK( Generic_Product__c ) )</errorConditionFormula>
        <errorDisplayField>Generic_Product__c</errorDisplayField>
        <errorMessage>Generic Product is Required for Automatic Provisioning Tasks</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>GP_for_Yellowpages_Required</fullName>
        <active>false</active>
        <description>Verifies that for Yellowpages (PL) Tasks GP vas provided</description>
        <errorConditionFormula>AND( ISPICKVAL( Task_Type__c , &apos;Yellowpages (PL)&apos;), ISBLANK( Generic_Product__c ) )</errorConditionFormula>
        <errorDisplayField>Generic_Product__c</errorDisplayField>
        <errorMessage>Generic Product is required for Yellowpages automatic ta</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OSS_Task_not_in_Task_Plan</fullName>
        <active>false</active>
        <description>OSS Task can not be added to Task Plan</description>
        <errorConditionFormula>AND(Provisioning_Plan__r.RecordTypeId = &apos;01220000000Lgac&apos;, ISPICKVAL(Task_Type__c,&apos;OSS Provisioning&apos;))</errorConditionFormula>
        <errorDisplayField>Task_Type__c</errorDisplayField>
        <errorMessage>OSS Provisioning task can not be added to Task Plan</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_at_Datetime</fullName>
        <active>false</active>
        <description>If &quot;Start at&quot; is checked, &quot;Start at Datetime&quot; must be filled.</description>
        <errorConditionFormula>AND( Provisioning_Plan__r.Instance__c = true,Start_at__c = true, ISBLANK(Start_at_Datetime__c ))</errorConditionFormula>
        <errorDisplayField>Start_at_Datetime__c</errorDisplayField>
        <errorMessage>Start at Date time is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_at_Instance</fullName>
        <active>false</active>
        <description>&quot;Start at&quot; can be set only for Provisioning Plan instance.</description>
        <errorConditionFormula>AND(Provisioning_Plan__r.Instance__c = false, OR( Start_at__c = true, NOT(ISBLANK(Start_at_Datetime__c))))</errorConditionFormula>
        <errorMessage>Start Datetime of task can be set only on Provisioning Plan instance.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_at_or_Delay</fullName>
        <active>false</active>
        <description>Only one option is vaid - either Start at or Delay</description>
        <errorConditionFormula>AND(Provisioning_Plan__r.Instance__c = true,Delay__c = true,Start_at__c = true)</errorConditionFormula>
        <errorMessage>Only one option can be selected - either &quot;Delay&quot; or &quot;Start at&quot;.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_at_past</fullName>
        <active>false</active>
        <description>&quot;Start at&quot; can not be set in past</description>
        <errorConditionFormula>AND(Provisioning_Plan__r.Instance__c = true,Start_at_Datetime__c &lt;= NOW())</errorConditionFormula>
        <errorDisplayField>Start_at_Datetime__c</errorDisplayField>
        <errorMessage>Start at Datetime must be in future</errorMessage>
    </validationRules>
</CustomObject>